@@ -14,7 +14,7 @@ import unittest
 
 import weedb
 
-sqlite_db_dict = {'database': '/tmp/test.sdb', 'driver':'weedb.sqlite'}
+sqlite_db_dict = {'database': '/tmp/test.sdb', 'driver':'weedb.sqlite', 'timeout': '2'}
 mysql_db_dict  = {'database': 'test', 'user':'weewx', 'password':'weewx', 'driver':'weedb.mysql'}
 
 # Schema summary:
